--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" role="html-page">
+<html lang="en">
 
 <head>
 
@@ -26,16 +26,16 @@
 <body>
 
   <!-- this is the block at center of the page -->
-  <main class="main" role="main">
+  <main class="main">
 
     <!-- block with the image of the pruduct at the left side of the main block -->
-    <div class="image-div" role="image">
+    <div class="image-div" role="img">
       <img src="images/image-product-desktop.jpg" alt="Gabrielle-Essence-Eau-De-Parfum-image" class="image-product-desktop">
       <img src="images/image-product-mobile.jpg" alt="Gabrielle-Essence-Eau-De-Parfum-image" class="image-product-mobile">
     </div>
 
     <!-- block with features about product at the right side of the main block -->
-    <div class="text-div" role="product-information">
+    <div class="text-div" role="textbox">
       <h6 class="product-type">PERFUME</h6>
       <h1 class="product-title">Gabrielle Essence Eau De Parfum</h1>
       <p class="product-info">A floral, solar and voluptuous interpretation composed by Olivier Polge,
@@ -57,7 +57,7 @@
 
   </main>
 
-  <footer class="attribution" role="attribution">
+  <footer class="attribution" role="contentinfo">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://www.frontendmentor.io/profile/Marchino5791" target="_blank">Marco Paolino</a>.
   </footer>
