--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
   <main class="main">
 
     <!-- block with the image of the pruduct at the left side of the main block -->
-    <div class="image-div" role="img">
+    <div class="image-div" role="img" aria-label="product image">
       <img src="images/image-product-desktop.jpg" alt="Gabrielle-Essence-Eau-De-Parfum-image" class="image-product-desktop">
       <img src="images/image-product-mobile.jpg" alt="Gabrielle-Essence-Eau-De-Parfum-image" class="image-product-mobile">
     </div>
 
     <!-- block with features about product at the right side of the main block -->
-    <div class="text-div" role="textbox">
+    <div class="text-div" role="textbox" aria-label="product info">
       <h6 class="product-type">PERFUME</h6>
       <h1 class="product-title">Gabrielle Essence Eau De Parfum</h1>
       <p class="product-info">A floral, solar and voluptuous interpretation composed by Olivier Polge,
@@ -52,12 +52,12 @@
         </tr>
       </table>
 
-      <button class="add-to-cart-botton"><a class="add-to-cart-link" href="#"><img class="cart-img" src="images/icon-cart.svg" alt="icon-cart" /> Add to Cart</a></button>
+      <button class="add-to-cart-botton add-to-cart-link" href="#"><img class="cart-img" src="images/icon-cart.svg" alt="icon-cart" /> Add to Cart</button>
     </div>
 
   </main>
 
-  <footer class="attribution" role="contentinfo">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://www.frontendmentor.io/profile/Marchino5791" target="_blank">Marco Paolino</a>.
   </footer>
