--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </tr>
       </table>
 
-      <a  href="#" class="add-to-cart-link"><button class="add-to-cart-botton "><img class="cart-img" src="images/icon-cart.svg" alt="icon-cart" /> Add to Cart</button></a>
+      <a  href="#" class="add-to-cart-link add-to-cart-botton"><img class="cart-img" src="images/icon-cart.svg" alt="icon-cart" /> Add to Cart</a>
     </div>
 
   </main>
